Fix content is overflowing when container is smaller

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,8 @@
 .App {
   height: 100vh;
-  overflow: auto;
 }
 
 .container {
   position: relative;
-  height: 100vh;
+  height: 100%;
 }
