--- a/src/components/Home.scss
+++ b/src/components/Home.scss
@@ -2,7 +2,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100%;
+  padding: 80px 0;
+  min-height: 100%;
+  box-sizing: border-box;
 
   &-container {
     display: flex;
@@ -39,7 +41,6 @@
     height: 50px;
     transform: scaleX(1);
     width: 100%;
-    z-index: 1;
     transition: 0.8s;
     transform-origin: right;
 
