--- a/src/components/Menu.scss
+++ b/src/components/Menu.scss
@@ -1,4 +1,7 @@
 .menu {
+  position: fixed;
+  top: 0;
+  left: 0;
   background-color: #181818;
 
   &-link {
@@ -13,8 +16,6 @@
 
 @media only screen and (min-width: 600px) {
   .menu {
-    position: absolute;
-    top: 0;
     right: 0;
     padding-top: 30px;
     z-index: 1;
@@ -40,10 +41,7 @@
 
 @media only screen and (max-width: 600px) {
   .menu {
-    position: fixed;
-    left: 0;
-    top: 0;
-    height: 100vh;
+    height: 100%;
     width: 50%;
     min-width: 300px;
     transition: transform 0.5s ease-in-out;
@@ -60,10 +58,10 @@
       left: 0;
       right: 0;
       z-index: 1;
+      padding: 20px 0 0 20px;
     }
 
     &-hamburger {
-      padding: 20px 0 0 20px;
       font-size: 30px;
       cursor: pointer;
     }
