--- a/src/components/SkillsList.scss
+++ b/src/components/SkillsList.scss
@@ -1,8 +1,11 @@
 .skills {
   display: flex;
+  align-items: center;
   justify-content: center;
-  align-items: flex-start;
-  margin: 60px 0;
+  padding: 80px 0;
+  min-height: 100%;
+  box-sizing: border-box;
+
   &-container {
     column-count: 1;
   }
@@ -10,10 +13,6 @@
 
 @media only screen and (min-width: 650px) {
   .skills {
-    align-items: center;
-    height: 100%;
-    margin: 0;
-
     &-container {
       column-count: 2;
     }
